// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflections: (hierarchy) should compile nested type hierarchy 1`] = `
"## Hierarchy

- [\`ParentClass\`](classes/parentclass.md)

  ↳ **\`ChildClassA\`**

  ↳↳ [\`GrandChildClassA\`](classes/grandchildclassa.md)

[TOC]

[GROUPS]"
`;

exports[`Reflections: (hierarchy) should compile type hierarchy 1`] = `
"## Hierarchy

- **\`ParentClass\`**

  ↳ [\`ChildClassA\`](classes/childclassa.md)

  ↳ [\`ChildClassB\`](classes/childclassb.md)

[TOC]

[GROUPS]"
`;

exports[`Reflections: (template) should compile Enum 1`] = `
"[TOC]

[GROUPS]"
`;

exports[`Reflections: (template) should compile a callable reflection 1`] = `
"## Callable

### CallableReflection

▸ **CallableReflection**(): \`string\`

#### Returns

\`string\`

#### Defined in

[reflections.ts:6](https://github.com/tgreyuk/typedoc-plugin-markdown/blob/a1a25ce/packages/typedoc-plugin-markdown/test/stubs/src/reflections.ts#L6)

[TOC]"
`;

exports[`Reflections: (template) should compile an indexable reflection 1`] = `"[TOC]"`;

exports[`Reflections: (template) should compile implemented class 1`] = `
"## Implements

- [\`ReflectionClass\`](classes/reflectionclass.md)

[TOC]

[GROUPS]"
`;
